2023-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upbibtex.ch: Fix bug of substring$
	from Yukimasa Morimi san:
	https://github.com/texjporg/tex-jp-build/issues/157

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.
	https://tug.org/pipermail/tex-k/2023-March/003911.html

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.
	Report from Ken Brown.

2023-01-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/uptex.am:
	Revert options --enable-uptex(-synctex) for configure.
	By default, we do not build binary of upTeX (uptex)
	and we use alias of e-upTeX (euptex) for it.
	https://github.com/texjporg/tex-jp-build/issues/32
	ptriptest.test: Add a test for pTeX compatible mode.

2023-01-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptexextra.h:
	Make AUTHOR "Japanese TeX Development Community".
	* am/uptex.am:
	Remove binaries of upTeX (uptex).
	Now we use alias of e-upTeX (euptex) for upTeX (uptex).
	https://github.com/texjporg/tex-jp-build/issues/32
	* COPYRIGHT: copyright year.

2022-12-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test, am/uptex.am:
	Add tests for file names with JIS X 0208 & UTF-8 characters
	in `uptex --kanji-internal={euc,sjis,uptex}`.
	https://github.com/texjporg/tex-jp-build/issues/136

2022-12-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex.defines, kanji.h, am/uptex.am:
	Accept file names with JIS X 0208 characters
	in `uptex --kanji-internal={euc,sjis}`.
	https://github.com/texjporg/tex-jp-build/issues/136

2022-12-12  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: Fix a bug that \inhibitxspcode after Japanese
	character was ineffective due to lack of mod max_cjk_val.
	See comments on 2022-12-11.
	https://github.com/texjporg/tex-jp-build/issues/32
