@@ -6,6 +6,14 @@
 
 test -d tests || mkdir -p tests
 
+# pre-generated test results in the repository are stored in LF
+# but the output might be written in CRLF on some platform.
+# if 'diff --strip-trailing-cr' is available, exploit it.
+# (useful for tests on win32 binaries run on MSYS shell)
+DIFF="diff"
+$DIFF --strip-trailing-cr $0 $0 \
+  && DIFF="diff --strip-trailing-cr" || echo
+
 ./tftopl -char=foo -help || exit 1
 
 ./tftopl -version || exit 1
@@ -21,5 +29,5 @@ diff $srcdir/tests/cmr10.pl tests/xcmr10a.pl || exit 1
 
 ./tftopl -verbose $srcdir/tests/cmr10 >tests/xcmr10b.pl || exit 1
 
-diff $srcdir/tests/cmr10.pl tests/xcmr10b.pl || exit 1
+$DIFF $srcdir/tests/cmr10.pl tests/xcmr10b.pl || exit 1
 
